# microservices/carts/pkg/api/v1/carts.pb.go
@@ -29,7 +29,7 @@ const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
 
 type Cart struct {
 	Id                   string               `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
-	Items                []*Cart_Item         `protobuf:"bytes,2,rep,name=items,proto3" json:"items,omitempty"`
+	Items                string               `protobuf:"bytes,2,opt,name=items,proto3" json:"items,omitempty"`
 	Created              *timestamp.Timestamp `protobuf:"bytes,3,opt,name=created,proto3" json:"created,omitempty"`
 	Updated              *timestamp.Timestamp `protobuf:"bytes,4,opt,name=updated,proto3" json:"updated,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}             `json:"-"`
@@ -69,11 +69,11 @@ func (m *Cart) GetId() string {
 	return ""
 }
 
-func (m *Cart) GetItems() []*Cart_Item {
+func (m *Cart) GetItems() string {
 	if m != nil {
 		return m.Items
 	}
-	return nil
+	return ""
 }
 
 func (m *Cart) GetCreated() *timestamp.Timestamp {
@@ -88,53 +88,6 @@ func (m *Cart) GetUpdated() *timestamp.Timestamp {
 		return m.Updated
 	}
 	return nil
-}
-
-type Cart_Item struct {
-	Id                   string   `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty"`
-	Qty                  string   `protobuf:"bytes,2,opt,name=qty,proto3" json:"qty,omitempty"`
-	XXX_NoUnkeyedLiteral struct{} `json:"-"`
-	XXX_unrecognized     []byte   `json:"-"`
-	XXX_sizecache        int32    `json:"-"`
-}
-
-func (m *Cart_Item) Reset()         { *m = Cart_Item{} }
-func (m *Cart_Item) String() string { return proto.CompactTextString(m) }
-func (*Cart_Item) ProtoMessage()    {}
-func (*Cart_Item) Descriptor() ([]byte, []int) {
-	return fileDescriptor_eb9f7b8935c2f010, []int{0, 0}
-}
-
-func (m *Cart_Item) XXX_Unmarshal(b []byte) error {
-	return xxx_messageInfo_Cart_Item.Unmarshal(m, b)
-}
-func (m *Cart_Item) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
-	return xxx_messageInfo_Cart_Item.Marshal(b, m, deterministic)
-}
-func (m *Cart_Item) XXX_Merge(src proto.Message) {
-	xxx_messageInfo_Cart_Item.Merge(m, src)
-}
-func (m *Cart_Item) XXX_Size() int {
-	return xxx_messageInfo_Cart_Item.Size(m)
-}
-func (m *Cart_Item) XXX_DiscardUnknown() {
-	xxx_messageInfo_Cart_Item.DiscardUnknown(m)
-}
-
-var xxx_messageInfo_Cart_Item proto.InternalMessageInfo
-
-func (m *Cart_Item) GetId() string {
-	if m != nil {
-		return m.Id
-	}
-	return ""
-}
-
-func (m *Cart_Item) GetQty() string {
-	if m != nil {
-		return m.Qty
-	}
-	return ""
 }
 
 type CreateRequest struct {
@@ -601,7 +554,6 @@ func (m *ListResponse) GetData() []*Cart {
 
 func init() {
 	proto.RegisterType((*Cart)(nil), "v1.Cart")
-	proto.RegisterType((*Cart_Item)(nil), "v1.Cart.Item")
 	proto.RegisterType((*CreateRequest)(nil), "v1.CreateRequest")
 	proto.RegisterType((*CreateResponse)(nil), "v1.CreateResponse")
 	proto.RegisterType((*ReadRequest)(nil), "v1.ReadRequest")
@@ -619,51 +571,49 @@ func init() {
 }
 
 var fileDescriptor_eb9f7b8935c2f010 = []byte{
-	// 691 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x54, 0xcf, 0x6f, 0xd3, 0x30,
-	0x18, 0x55, 0xd2, 0xd2, 0x31, 0x97, 0x76, 0xc5, 0xfc, 0x50, 0x89, 0x26, 0x2d, 0x0a, 0x97, 0xaa,
-	0xa2, 0xc9, 0x1a, 0x7a, 0x40, 0x65, 0x62, 0x1b, 0x03, 0x21, 0xa4, 0x71, 0x09, 0x70, 0x80, 0x9b,
-	0xd7, 0x7c, 0x6b, 0xcd, 0x9a, 0xd8, 0x8b, 0xdd, 0x0e, 0x84, 0x76, 0xe1, 0xce, 0x05, 0x6e, 0xfc,
-	0x57, 0x08, 0x71, 0xe0, 0xce, 0x1f, 0x82, 0x6c, 0x27, 0x5b, 0xbb, 0xd1, 0x22, 0x71, 0x4a, 0xfc,
-	0xf9, 0x7d, 0xef, 0x3d, 0xfb, 0x7b, 0x09, 0xaa, 0x0e, 0x48, 0x26, 0x85, 0xcf, 0x33, 0x26, 0x19,
-	0xb6, 0xa7, 0x5d, 0x67, 0x63, 0xc8, 0xd8, 0x70, 0x0c, 0x81, 0xae, 0x1c, 0x4c, 0x0e, 0x03, 0x49,
-	0x13, 0x10, 0x92, 0x24, 0xdc, 0x80, 0x9c, 0xf5, 0x1c, 0x40, 0x38, 0x0d, 0x48, 0x9a, 0x32, 0x49,
-	0x24, 0x65, 0x69, 0x4e, 0xe1, 0xdc, 0xd3, 0x8f, 0x41, 0x67, 0x08, 0x69, 0x47, 0x9c, 0x90, 0xe1,
-	0x10, 0xb2, 0x80, 0x71, 0x8d, 0xb8, 0x8c, 0xf6, 0xbe, 0x5b, 0xa8, 0xbc, 0x47, 0x32, 0x89, 0xeb,
-	0xc8, 0xa6, 0x71, 0xd3, 0x72, 0xad, 0xd6, 0x6a, 0x64, 0xd3, 0x18, 0xdf, 0x45, 0x57, 0xa8, 0x84,
-	0x44, 0x34, 0x6d, 0xb7, 0xd4, 0xaa, 0x86, 0x35, 0x7f, 0xda, 0xf5, 0x15, 0xd0, 0x7f, 0x2e, 0x21,
-	0x89, 0xcc, 0x1e, 0xee, 0xa1, 0x95, 0x41, 0x06, 0x44, 0x42, 0xdc, 0x2c, 0xb9, 0x56, 0xab, 0x1a,
-	0x3a, 0xbe, 0xf1, 0xe6, 0x17, 0xe6, 0xfd, 0x57, 0x85, 0xf9, 0xa8, 0x80, 0xaa, 0xae, 0x09, 0x8f,
-	0x75, 0x57, 0xf9, 0xdf, 0x5d, 0x39, 0xd4, 0x69, 0xa1, 0xb2, 0x92, 0xbe, 0x64, 0xb4, 0x81, 0x4a,
-	0xc7, 0xf2, 0x43, 0xd3, 0xd6, 0x05, 0xf5, 0xea, 0x6d, 0xa3, 0xda, 0x9e, 0x96, 0x8a, 0xe0, 0x78,
-	0x02, 0x42, 0x2a, 0x08, 0xe1, 0x34, 0xef, 0x51, 0xaf, 0x78, 0x1d, 0x95, 0xd5, 0xb5, 0xeb, 0xae,
-	0x6a, 0x78, 0xb5, 0x38, 0x5c, 0xa4, 0xab, 0x5e, 0x88, 0xea, 0x05, 0x81, 0xe0, 0x2c, 0x15, 0xf0,
-	0x17, 0x06, 0x63, 0xc3, 0x2e, 0x6c, 0x78, 0x01, 0xaa, 0x46, 0x40, 0xe2, 0xc5, 0x92, 0x17, 0x1b,
-	0x1e, 0xa1, 0x6b, 0xa6, 0x61, 0xa1, 0xc4, 0x72, 0x93, 0xdb, 0xa8, 0xf6, 0x5a, 0x5f, 0xcd, 0xff,
-	0x9e, 0x72, 0x0b, 0xd5, 0x0b, 0x82, 0x85, 0x16, 0x9a, 0xe7, 0xa3, 0x52, 0x24, 0xa5, 0xb3, 0x71,
-	0x78, 0x5d, 0x54, 0x7b, 0x02, 0x63, 0x58, 0x26, 0x7f, 0xf1, 0xc4, 0x5b, 0xa8, 0x5e, 0xb4, 0x2c,
-	0x13, 0x8c, 0x35, 0xe6, 0x4c, 0x30, 0x5f, 0x7a, 0x1b, 0xa8, 0xba, 0x4f, 0x85, 0x5c, 0x28, 0xa7,
-	0x2e, 0xd4, 0x00, 0x96, 0x5d, 0x68, 0x4c, 0x24, 0xc9, 0x23, 0x3d, 0x73, 0x1f, 0xaa, 0x1a, 0x7e,
-	0x2e, 0xa1, 0xaa, 0x5a, 0xbe, 0x84, 0x6c, 0x4a, 0x07, 0x80, 0x77, 0x50, 0x59, 0xf1, 0xe1, 0x35,
-	0x85, 0x9b, 0x91, 0x76, 0x1a, 0xe7, 0x05, 0x23, 0xe5, 0xdd, 0xfa, 0xf4, 0xe3, 0xf7, 0x57, 0x7b,
-	0x0d, 0xd7, 0x82, 0x69, 0x37, 0xd0, 0xdf, 0x73, 0x40, 0xc6, 0x63, 0xfc, 0x14, 0x55, 0x4c, 0x8e,
-	0xf0, 0x75, 0xad, 0x35, 0x1b, 0x4a, 0x07, 0xcf, 0x96, 0x72, 0x9e, 0x9b, 0x9a, 0xa7, 0xee, 0xad,
-	0x9e, 0xf1, 0xf4, 0xad, 0x36, 0xde, 0x45, 0x65, 0x95, 0x14, 0x63, 0x64, 0x26, 0x64, 0xc6, 0xc8,
-	0x6c, 0x88, 0xbc, 0xdb, 0x9a, 0xa0, 0x81, 0xeb, 0xe7, 0x46, 0x3e, 0xd2, 0xf8, 0x14, 0x53, 0x54,
-	0x31, 0xb3, 0x36, 0x4e, 0xe6, 0x82, 0x63, 0x9c, 0xcc, 0x47, 0xc1, 0x7b, 0xa0, 0x89, 0x42, 0xe7,
-	0xc6, 0x0c, 0x91, 0x7a, 0xf8, 0x34, 0x3e, 0xed, 0x5b, 0xed, 0xb7, 0xcd, 0x70, 0xc1, 0x0e, 0x7e,
-	0x86, 0x2a, 0x66, 0xca, 0x46, 0x6a, 0x2e, 0x24, 0x46, 0x6a, 0x3e, 0x04, 0x85, 0xe7, 0xf6, 0x05,
-	0xcf, 0x8f, 0x7f, 0x59, 0x5f, 0x76, 0x7f, 0x5a, 0x98, 0xa1, 0x9a, 0x9a, 0x8a, 0x70, 0xf3, 0xb9,
-	0x78, 0x6f, 0x10, 0x7a, 0x41, 0x8f, 0xc0, 0xdd, 0x27, 0x20, 0x09, 0xde, 0x1c, 0x49, 0xc9, 0x45,
-	0x3f, 0x08, 0xc6, 0x6a, 0xd9, 0x11, 0x23, 0xc6, 0x39, 0x4d, 0x87, 0x1d, 0x45, 0xd4, 0x89, 0x21,
-	0x61, 0xfe, 0x21, 0xcd, 0xe0, 0x80, 0x08, 0x20, 0x9c, 0xfb, 0x03, 0x96, 0x38, 0x77, 0x12, 0x7a,
-	0x04, 0x3b, 0x1a, 0x1e, 0xc3, 0x14, 0xc6, 0x8c, 0x27, 0x90, 0x4a, 0xb5, 0x15, 0x96, 0xba, 0xfe,
-	0x66, 0xdb, 0xb2, 0xc2, 0x06, 0xe1, 0x7c, 0x4c, 0x07, 0xfa, 0x4f, 0x19, 0xbc, 0x13, 0x2c, 0xed,
-	0x5f, 0xaa, 0x44, 0x0f, 0x51, 0xa9, 0xb7, 0xd9, 0xc3, 0x3d, 0xd4, 0x8e, 0x40, 0x4e, 0xb2, 0x14,
-	0x62, 0xf7, 0x64, 0x04, 0xa9, 0x2b, 0x47, 0xe0, 0x66, 0x20, 0xd8, 0x24, 0x1b, 0x80, 0x1b, 0x33,
-	0x10, 0x6e, 0xca, 0xa4, 0x0b, 0xef, 0xa9, 0x90, 0x3e, 0xae, 0xa0, 0xf2, 0x37, 0xdb, 0x5a, 0x39,
-	0xa8, 0xe8, 0x3f, 0xdd, 0xfd, 0x3f, 0x01, 0x00, 0x00, 0xff, 0xff, 0xb0, 0x7a, 0x58, 0x41, 0xfd,
-	0x05, 0x00, 0x00,
+	// 666 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x54, 0x41, 0x6f, 0xd3, 0x4c,
+	0x10, 0x95, 0x9d, 0x7c, 0xe9, 0xd7, 0x09, 0x49, 0xc3, 0x52, 0x50, 0xb0, 0x2a, 0xd5, 0xf2, 0xa9,
+	0x8a, 0x88, 0xdd, 0x98, 0x1c, 0x50, 0xa8, 0x68, 0x4b, 0x41, 0x5c, 0xca, 0x25, 0xc0, 0x01, 0x6e,
+	0xdb, 0x78, 0x9a, 0x2c, 0x4d, 0xbc, 0x8b, 0x77, 0x93, 0x22, 0xa1, 0x5e, 0xb8, 0x73, 0x81, 0x0b,
+	0xe2, 0x6f, 0x21, 0x0e, 0xdc, 0xf9, 0x21, 0x68, 0x77, 0xe3, 0x26, 0x69, 0x49, 0x90, 0x38, 0x39,
+	0x3b, 0x7e, 0xf3, 0xde, 0x9b, 0x9d, 0x17, 0x43, 0xb9, 0x47, 0x33, 0x25, 0x43, 0x91, 0x71, 0xc5,
+	0x89, 0x3b, 0x69, 0x79, 0xdb, 0x7d, 0xce, 0xfb, 0x43, 0x8c, 0x4c, 0xe5, 0x64, 0x7c, 0x1a, 0x29,
+	0x36, 0x42, 0xa9, 0xe8, 0x48, 0x58, 0x90, 0xb7, 0x35, 0x05, 0x50, 0xc1, 0x22, 0x9a, 0xa6, 0x5c,
+	0x51, 0xc5, 0x78, 0x3a, 0xa5, 0xf0, 0xee, 0x99, 0x47, 0xaf, 0xd9, 0xc7, 0xb4, 0x29, 0xcf, 0x69,
+	0xbf, 0x8f, 0x59, 0xc4, 0x85, 0x41, 0x5c, 0x47, 0x07, 0x5f, 0x1d, 0x28, 0x1e, 0xd1, 0x4c, 0x91,
+	0x2a, 0xb8, 0x2c, 0xa9, 0x3b, 0xbe, 0xb3, 0xb3, 0xde, 0x75, 0x59, 0x42, 0x36, 0xe1, 0x3f, 0xa6,
+	0x70, 0x24, 0xeb, 0xae, 0x29, 0xd9, 0x03, 0x69, 0xc3, 0x5a, 0x2f, 0x43, 0xaa, 0x30, 0xa9, 0x17,
+	0x7c, 0x67, 0xa7, 0x1c, 0x7b, 0xa1, 0x35, 0x13, 0xe6, 0x6e, 0xc3, 0x97, 0xb9, 0xdb, 0x6e, 0x0e,
+	0xd5, 0x5d, 0x63, 0x91, 0x98, 0xae, 0xe2, 0xdf, 0xbb, 0xa6, 0xd0, 0x60, 0x1f, 0x2a, 0x47, 0x86,
+	0xa0, 0x8b, 0xef, 0xc6, 0x28, 0x15, 0xa9, 0x41, 0x81, 0x0a, 0x36, 0xf5, 0xa8, 0x7f, 0x92, 0x2d,
+	0x28, 0xea, 0xdb, 0x33, 0x1e, 0xcb, 0xf1, 0xff, 0xe1, 0xa4, 0x15, 0xea, 0x61, 0xba, 0xa6, 0x1a,
+	0xc4, 0x50, 0xcd, 0x09, 0xa4, 0xe0, 0xa9, 0xc4, 0x3f, 0x30, 0xd8, 0xb1, 0xdd, 0x7c, 0xec, 0x20,
+	0x82, 0x72, 0x17, 0x69, 0xb2, 0x5c, 0xf2, 0x6a, 0xc3, 0x23, 0xb8, 0x61, 0x1b, 0x96, 0x4a, 0xac,
+	0x36, 0xb9, 0x0f, 0x95, 0x57, 0x66, 0xe0, 0x7f, 0x9d, 0x72, 0x0f, 0xaa, 0x39, 0xc1, 0x52, 0x0b,
+	0xf5, 0xd9, 0x02, 0x34, 0x49, 0x61, 0x76, 0xc9, 0x2d, 0xa8, 0x3c, 0xc1, 0x21, 0xae, 0x92, 0xbf,
+	0x3a, 0xf1, 0x1e, 0x54, 0xf3, 0x96, 0x55, 0x82, 0x89, 0xc1, 0x5c, 0x0a, 0x4e, 0x8f, 0xc1, 0x36,
+	0x94, 0x8f, 0x99, 0x54, 0x4b, 0xe5, 0xf4, 0x85, 0x5a, 0xc0, 0xaa, 0x0b, 0x4d, 0xa8, 0xa2, 0x75,
+	0xd7, 0x2f, 0x2c, 0xde, 0x87, 0xae, 0xc6, 0x9f, 0x0a, 0x50, 0xd6, 0xc7, 0x17, 0x98, 0x4d, 0x58,
+	0x0f, 0xc9, 0x01, 0x14, 0x35, 0x1f, 0xd9, 0xd0, 0xb8, 0x39, 0x69, 0xaf, 0x36, 0x2b, 0x58, 0xa9,
+	0xe0, 0xf6, 0xc7, 0xef, 0xbf, 0xbe, 0xb8, 0x1b, 0xa4, 0x12, 0x4d, 0x5a, 0x91, 0xf9, 0x5b, 0x46,
+	0x74, 0x38, 0x24, 0x4f, 0xa1, 0x64, 0x73, 0x44, 0x6e, 0x1a, 0xad, 0xf9, 0x50, 0x7a, 0x64, 0xbe,
+	0x34, 0xe5, 0xd9, 0x34, 0x3c, 0xd5, 0x60, 0xfd, 0x92, 0xa7, 0xe3, 0x34, 0xc8, 0x21, 0x14, 0x75,
+	0x52, 0xac, 0x91, 0xb9, 0x90, 0x59, 0x23, 0xf3, 0x21, 0x0a, 0xee, 0x18, 0x82, 0x1a, 0xa9, 0xce,
+	0x8c, 0x7c, 0x60, 0xc9, 0x05, 0x61, 0x50, 0xb2, 0xbb, 0xb6, 0x4e, 0x16, 0x82, 0x63, 0x9d, 0x2c,
+	0x46, 0x21, 0x78, 0x60, 0x88, 0x62, 0xef, 0xd6, 0x1c, 0x91, 0x7e, 0x84, 0x2c, 0xb9, 0xe8, 0x38,
+	0x8d, 0x37, 0xf5, 0x78, 0xc9, 0x1b, 0xf2, 0x0c, 0x4a, 0x76, 0xcb, 0x56, 0x6a, 0x21, 0x24, 0x56,
+	0x6a, 0x31, 0x04, 0xb9, 0xe7, 0xc6, 0x15, 0xcf, 0x8f, 0x7f, 0x3a, 0x9f, 0x0f, 0x7f, 0x38, 0x84,
+	0x43, 0x45, 0x6f, 0x45, 0xfa, 0xd3, 0xbd, 0x04, 0xaf, 0x01, 0x9e, 0xb3, 0x33, 0xf4, 0x8f, 0x29,
+	0x2a, 0x4a, 0x76, 0x07, 0x4a, 0x09, 0xd9, 0x89, 0xa2, 0xa1, 0x3e, 0x36, 0xe5, 0x80, 0x0b, 0xc1,
+	0xd2, 0x7e, 0x53, 0x13, 0x35, 0x13, 0x1c, 0xf1, 0xf0, 0x94, 0x65, 0x78, 0x42, 0x25, 0x52, 0x21,
+	0xc2, 0x1e, 0x1f, 0x79, 0x77, 0x47, 0xec, 0x0c, 0x0f, 0x0c, 0x3c, 0xc1, 0x09, 0x0e, 0xb9, 0x18,
+	0x61, 0xaa, 0xf4, 0xab, 0xb8, 0xd0, 0x0a, 0x77, 0x1b, 0x8e, 0x13, 0xd7, 0xa8, 0x10, 0x43, 0xd6,
+	0x33, 0x1f, 0xbc, 0xe8, 0xad, 0xe4, 0x69, 0xe7, 0x5a, 0xa5, 0xfb, 0x10, 0x0a, 0xed, 0xdd, 0x36,
+	0x69, 0x43, 0xa3, 0x8b, 0x6a, 0x9c, 0xa5, 0x98, 0xf8, 0xe7, 0x03, 0x4c, 0x7d, 0x35, 0x40, 0x3f,
+	0x43, 0xc9, 0xc7, 0x59, 0x0f, 0xfd, 0x84, 0xa3, 0xf4, 0x53, 0xae, 0x7c, 0x7c, 0xcf, 0xa4, 0x0a,
+	0x49, 0x09, 0x8a, 0xdf, 0x5c, 0x67, 0xed, 0xa4, 0x64, 0xbe, 0x5f, 0xf7, 0x7f, 0x07, 0x00, 0x00,
+	0xff, 0xff, 0xeb, 0x2b, 0x7a, 0xb1, 0xc4, 0x05, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
